<TinUI, a modern frame to render various widgets element for tkinter in one control.>
    Copyright (C) <2021-present>  <Smart-Space | Junming Zhang> <tsan-zane@outlook.com|smart-space@qq.com>
    2019（原型框架）2021（正式命名TinUI发布）

==========更新日志==========


==========5.0==========
2024- pre-4
1. labelframe改为圆角边框
*2. notebook + 和 x（变色提示） 新样式
3. ratingbar新样式，参数r改size（字体大小）
4. BasicTinUI.clean_windows()清除浮出控件的子窗口，TinUIXml的clean也会触发
5. notebook支持自定义滚动条颜色
2024-2-13 pre-3
1. 优化pipspager样式
2. textbox, listbox, canvas, ui支持自定scrollbar颜色
3. 新介绍窗口
4. scrollbar新标识元素
5. 修复treeview展开时可能的提示元素的位置错位
2024-2-9 pre-2
1. 更新menu样式
2. menubutton 添加segeo fluent icon字体文件
3. 更新picker样式
4. 新logo
5. 新增菜单按钮 menubutton
6. 更新黑暗样式
2024-2-6 pre-1
1. 添加TinUIFont类，管理字体文件
2. 更新table样式

==========4.7==========
2024-1-24
1. 优化radiobox样式
2. 新增滚动选值框 picker

==========4.6==========
2023-12-17
1. spinbox返回值添加num属性
2. 修复listbox横向滚动条长度错误的问题

==========4.5==========
2023-11-12
1. 修复treeview调试错误

==========4.4==========
2023-3-11
1. 新增密码输入框 passwordbox

==========4.3==========
2023-2-2
1. 优化帮助手册
2. 优化ratingbar, onoff外观
3. 优化spinbox外观，更新spinbox示例
4. 修复treeview的一个展开错误
5. 新增滑动控件 swipecontrol

==========4.2==========
2023-1-21
1. 更改image计算精度
2. listbox添加add、delete方法
3. ratingbar只选择一个星且再次选择第一个时，取消选择，返回0
4. 修复button2无法返回边框元素的错误
5. 修复radiobox示例中的错误
6. 添加状态开关按钮 togglebutton

==========4.1==========
2023-1-9
1. 优化 TinUI帮助手册
2. 添加pipspager切换动画
3. 修复treeview展开和闭合后触发选定的问题

==========4.0==========
2023-1-1
1. 优化radiobox效果
2. 修复listview返回元素不全的问题
3. 新增树状图 treeview
4. 使用TinUI LOGO.ico
5. 新增普通图片 image
6. 随包发布 TinUI帮助手册 实用程序，在\test目录下
7. 优化复选框标识符

==========3.34==========
2022-10-22
1. 新增列表视图 listview
2. 更新样式
3. TinUI支持直接横向滚动
4. 破坏性，tooltip返回值改为函数get_return，节省窗口资源

==========3.33==========
2022-10-4
1. 新增元素等待框 waitframe

==========3.32==========
2022-9-17
1. 感谢TotoWang-hhh（github）提交的自动识别windows系统深浅色模式样式
2. window.py添加快速翻页功能，方便样式theme开发者展示

==========3.31==========
2022-9-9
1. onoff移动动画
2. 创建TinUIWidget类，用来显示单个元素控件